Enhance bill data retrieval by including hearings, votes, and reports in the get_all_bill_data function. Update article generation process to incorporate comprehensive bill data, ensuring more detailed and accurate articles. Adjust related worker classes to streamline article creation and hyperlinking.

--- a/output/hr2965.md
+++ b/output/hr2965.md
@@ -1,23 +1,25 @@
-# Small Business Bill Inches Forward, Faces Uncertain Path
+## Small Business Bill Inches Closer to Floor Vote Amid GOP Push
 
-By Sarah Miller - October 9, 2025
+By Alex Johnson - October 9, 2025
 
-**WASHINGTON -** House Republicans are maneuvering "Small Business Regulatory Reduction Act of 2025" ([HR2965](https://www.congress.gov/bill/119th-congress/hr-bill/2965)) through the calendar process this week, but the path forward remains unclear as the bill moves from committee to potential floor action. The legislation, championed by Rep. Beth Van Duyne (R-TX-24), seeks to ease regulatory burdens on small businesses - a priority for Republicans heading into the midterm elections.
+The "Small Business Regulatory Reduction Act of 2025" ( [H.R.2965](https://www.congress.gov/bill/119th-congress/hr-bill/2965) ) is moving through the House, fueled by Republican efforts to ease burdens on small businesses - a move that's already sparking debate about potential bipartisan support and the bill's ultimate fate.
 
-**Inside the Room**
+**Immediate Context:**
 
-The bill's journey began with a report from the House [Small Business Committee](https://api.congress.gov/v3/committee/house/hssm00) on May 21, 2025, marking it as "Placed on the Union Calendar" (Calendar No. 82).  Prior to that, it was marked up by the committee on April 30, 2025, and referred to the House on April 17, 2025.  The [Small Business Committee](https://api.congress.gov/v3/committee/house/hssm00) has logged eight actions related to [HR2965](https://www.congress.gov/bill/119th-congress/hr-bill/2965), according to data provided - a testament to its sustained attention within the Republican ranks. Five cosponsors have joined Rep. Van Duyne in backing the legislation. Crucially, Van Duyne herself sits on the [Small Business Committee](https://api.congress.gov/v3/committee/house/hssm00) where the bill was both marked up and reported.
+As of today, [H.R.2965](https://www.congress.gov/bill/119th-congress/hr-bill/2965) remains within the purview of the [Small Business Committee](https://api.congress.gov/v3/committee/house/hssm00), where it was reported and marked up on May 21, 2025.  The bill's placement on the Union Calendar - specifically Calendar No. 82 - signals a significant step toward potential floor consideration. However, crucial details regarding the nature of any votes cast remain unclear, leaving the path forward uncertain.
 
-The bill's current location on the Union Calendar signifies a significant step, although it doesn't guarantee immediate floor consideration. The calendar is essentially a holding place where bills await action - whether that's a committee vote or ultimately, a full House vote.  Notably, data indicates no amendments were introduced during the markup process. 
+**Inside the Room:**
 
-**Politics**
+The legislation itself aims to reduce regulatory burdens on small businesses, a priority for many Republicans heading into the midterm elections.  [Rep. Beth Van Duyne](https://api.congress.gov/v3/member/V000134) (R-TX-24), a cosponsor of [H.R.2965](https://www.congress.gov/bill/119th-congress/hr-bill/2965), sits on the [Small Business Committee](https://api.congress.gov/v3/committee/house/hssm00) where it originated, suggesting a key role in shaping its trajectory.  Currently, the bill has five cosponsors, demonstrating some initial Republican buy-in. Notably, there are no amendments listed for this legislation, indicating a currently streamlined approach within the committee.
 
-While the bill enjoys support within the Republican caucus, its path through the larger House remains uncertain. The timing of its placement on the Union Calendar suggests an attempt to build momentum for a potential floor vote before the end of the year - a strategy favored by leadership seeking to demonstrate legislative accomplishments ahead of November's elections.  However, given the packed agenda facing Congress and the potential for competing priorities, the bill's prospects are subject to change. 
+**Politics:**
 
-**What's Next**
+The lack of reported votes and amendment activity raises questions about the level of bipartisan support surrounding [H.R.2965](https://www.congress.gov/bill/119th-congress/hr-bill/2965). While Republicans are driving the initiative, securing sufficient support from Democrats to pass the bill on the House floor will be a considerable challenge. The absence of publicly available data regarding party-line votes adds to the opacity surrounding its potential success.
 
-The next step will depend on House leadership scheduling decisions.  While no specific vote date has been announced, sources indicate that discussions are ongoing regarding its placement on a forthcoming committee markup or potentially directly onto the floor. The lack of amendments further complicates predicting a timeline - removing a potential point of contention but also streamlining the process for a possible vote. 
+**What's Next:**
 
-**Closing Graf**
+The placement on the Union Calendar is a procedural hurdle cleared; the next step involves scheduling it for a vote.  However, with no record of recent votes and no amendments in play, the bill's path to the floor remains fluid.  Leadership will likely need to weigh strategic considerations - including potential opportunities for amendment insertion - before formally scheduling a vote.
 
-[HR2965](https://www.congress.gov/bill/119th-congress/hr-bill/2965)'s progress represents a key test of Republican ability to deliver on campaign promises regarding small business support, and its ultimate fate will likely shape the narrative surrounding the party's legislative agenda in the coming weeks.
+**Closing Graf:**
+
+As [H.R.2965](https://www.congress.gov/bill/119th-congress/hr-bill/2965) continues its journey through the House, it will be closely watched for signs of bipartisan collaboration - or a renewed push from Republican leadership to advance the bill despite potential roadblocks.
