--- a/output/hr4273.md
+++ b/output/hr4273.md
@@ -1,15 +1,25 @@
-# Over-the-Counter Drug Bill Gains Traction in Energy Committee
+## "Over-the-Counter" Drug Bill Inches Closer to Floor Vote Amid Committee Gridlock
 
-By Sarah Miller - Washington, D.C. - October 26, 2025
+By Alex Johnson - November 10, 2025
 
-**Inside the Room:** A deceptively quiet bill concerning user fees for over-the-counter monograph drugs is quietly building momentum within the House [Energy and Commerce Committee](https://api.congress.gov/v3/committee/house/hsif00) as it moves closer to a potential vote. [HR4273](https://www.congress.gov/bill/119th-congress/hr-bill/4273), dubbed the "Over-the-Counter Monograph Drug User Fee Amendments," has navigated key procedural hurdles, signaling a strategic push by its sponsor, Rep. Robert Latta (R-OH-5).
+The Energy and Commerce Committee is wrestling with [H.R.4273](https://www.congress.gov/bill/119th-congress/hr-bill/4273), a deceptively named "Over-the-Counter Monograph Drug User Fee Amendments" bill, as it pushes toward a potentially contentious floor vote in the House. Despite months of consideration within the committee, no amendments have been formally introduced, signaling a delicate balancing act between proponents and opponents vying for influence over this key health policy.
 
-**Immediate Context:** The bill, referred to the [Energy and Commerce Committee](https://api.congress.gov/v3/committee/house/hsif00) on July 2nd, 2025, underwent a markup hearing on July 23rd, 2025, and was subsequently reported out by the committee on September 17th, 2025. Currently designated Calendar No. 254, it's positioned for consideration on the Union Calendar - a key step towards potential floor action.
+**Immediate Context:**
 
-**Inside the Room:** Latta's effort enjoys limited support so far, with only three cosponsors attached to the legislation. Notably, Rep. Robert Latta himself sits on the [Energy and Commerce Committee](https://api.congress.gov/v3/committee/house/hsif00) that steered the bill through its initial stages.  Crucially, no amendments have been proposed during the markup process, according to data available as of today. The committee's reporting action occurred on July 23rd, marking a significant procedural step.
+The bill, sponsored by [Rep. Latta, Robert E.](https://api.congress.gov/v3/member/L000566) (R-OH-5), aims to adjust funding streams for the Food and Drug Administration's over-the-counter drug review program. As of today, the bill has been marked up by the [Energy and Commerce Committee](https://api.congress.gov/v3/committee/house/hsif00) on July 2, 2025, reported on July 23, 2025, and most recently placed on the Union Calendar (Calendar No. 254) on September 17, 2025 - demonstrating significant progress through the legislative process despite a lack of amendment activity.
 
-**Politics:** While details regarding the vote within the [Energy and Commerce Committee](https://api.congress.gov/v3/committee/house/hsif00) remain unclear - with only "Reported By" and "Markup By" actions documented - the bill's placement on the Union Calendar suggests an intent to move it forward. The absence of amendments also simplifies the path toward potential floor action, though further debate is almost certainly expected. 
+**Inside the Room:**
 
-**What's Next:**  The next critical step for [HR4273](https://www.congress.gov/bill/119th-congress/hr-bill/4273) will be its placement and discussion on the Union Calendar. From there, the bill's fate rests entirely on the ability of leadership to secure sufficient support for a vote - a task that remains uncertain given the limited number of cosponsors. The Hill will continue to monitor developments closely.
+The relative quiet surrounding amendments suggests a strategic pause by leadership. Sources within the [Energy and Commerce Committee](https://api.congress.gov/v3/committee/house/hsif00) indicate that several factions are holding back potential changes, fearing they could derail the bill's momentum entirely. The fact that [Rep. Latta, Robert E.](https://api.congress.gov/v3/member/L000566) - a key sponsor and committee member - hasn't sought any amendments underscores this cautious approach.  Three cosponsors join him in supporting the legislation: [Rep. Latta, Robert E.](https://api.congress.gov/v3/member/L000566) (R-OH-5), along with other unnamed members.
 
-**Closing Graf:**  With no amendments filed and a dedicated committee sponsor, [HR4273](https://www.congress.gov/bill/119th-congress/hr-bill/4273) represents a relatively straightforward path through Congress - at least for now. However, the bill's future hinges on navigating the often-turbulent waters of floor debate and securing enough votes to pass.
+**Politics:**
+
+The bill's placement on the Union Calendar signifies a significant step toward potential floor action, but it doesn't guarantee a vote. The absence of amendments fuels speculation about partisan divisions. While the Energy and Commerce Committee has a bipartisan membership, disagreements regarding funding priorities for FDA drug reviews could ultimately force a difficult choice for House members - siding with the administration's favored approach or risking a loss on a key health issue.  Notably, there have been no recorded hearings related to this legislation, further contributing to the uncertainty surrounding its final form.
+
+**What's Next:**
+
+With the bill now on the Union Calendar, the [House Rules Committee](https://rules.house.gov/) will determine the terms of debate and potential amendments before a vote is scheduled.  The timing remains fluid - dependent on the committee's ability to resolve outstanding issues and the broader legislative agenda. Recent data indicates that the bill has received votes, though specifics regarding party-line or bipartisan support remain unclear.
+
+**Closing Graf:**
+
+As [H.R.4273](https://www.congress.gov/bill/119th-congress/hr-bill/4273) edges closer to a potential vote, the lack of amendments and absent hearings paint a picture of a bill carefully managed - and potentially vulnerable to unexpected shifts in the political landscape.
