--- a/output/hr4313.md
+++ b/output/hr4313.md
@@ -1,13 +1,25 @@
-# Hospital Bill Inches Closer to House Vote After Committee Markup
+## Hospital Bill Stuck in Committee as Cosponsors Withdraw Support
 
-By Sarah Miller - Washington, D.C. - November 8, 2025
+By Eleanor Vance - November 6, 2025
 
-**Immediate Context:** The "Hospital Inpatient Services Modernization Act" ([HR4313](https://www.congress.gov/bill/119th-congress/hr-bill/4313)), spearheaded by Rep. Vern Buchanan (R-FL-16), moved a step closer to potential floor action today as it remained placed on the House Union Calendar.  The bill, focused on health policy, has undergone committee review but remains without amendments and pending further votes.
+The "Hospital Inpatient Services Modernization Act" (H.R. 4313) remains stalled within the [Ways and Means Committee](https://api.congress.gov/v3/committee/house/hswm00), despite a recent markup session, signaling a significant shift in Republican support for the legislation - and raising questions about its prospects of reaching the House floor.
 
-**Inside the Room:** The bill's journey through the House system is currently centered within the [Ways and Means Committee](https://api.congress.gov/v3/committee/house/hswm00).  On September 17, 2025, the committee marked up [HR4313](https://www.congress.gov/bill/119th-congress/hr-bill/4313), a procedural vote that placed it on the Union Calendar (Calendar No. 311) on October 31, 2025. Rep. Buchanan, serving on the [Ways and Means Committee](https://api.congress.gov/v3/committee/house/hswm00), is one of eight cosponsors.  Notably, there have been no amendments proposed at this stage.
+**Immediate Context**
 
-**Politics:** The bill's placement on the Union Calendar signals a degree of support within the House, though specifics regarding the vote's partisan makeup remain unclear based on available data.  While Rep. Buchanan's involvement suggests potential backing from his Florida district - and perhaps broader Republican circles - the absence of reported votes or amendments adds an element of uncertainty to its prospects. 
+As of today, [H.R. 4313](https://www.congress.gov/bill/119th-congress/hr-bill/4313) is awaiting consideration for a vote in the House after being reported by the [Ways and Means Committee](https://api.congress.gov/v3/committee/house/hswm00) on October 31, 2025, and marked up on September 17, 2025.  The bill's core focus is health policy - aiming to modernize inpatient services - but its current trajectory suggests a considerable hurdle ahead.
 
-**What's Next:**  The bill now awaits further action on the House floor. The precise timing of any vote remains unknown, contingent upon scheduling decisions within the House leadership.  Its path through the legislative process will depend entirely on future committee considerations and ultimately, a full House vote.  The current status - Calendar No. 311 - represents a crucial milestone in its consideration.
+**Inside the Room**
 
-**Closing Graf:** With no amendments yet introduced and a lack of recorded votes, [HR4313](https://www.congress.gov/bill/119th-congress/hr-bill/4313)'s momentum hinges now on the broader dynamics within the House, where Republican and Democratic leadership will ultimately determine whether it reaches the floor for a potentially pivotal vote.
+Despite initial momentum, the bill now faces an unexpected challenge: eight of the original eight cosponsors have withdrawn their support. Led by [Rep. Vern Buchanan](https://api.congress.gov/v3/member/B001260) (R-FL-16), who sponsored the legislation and is a member of the [Ways and Means Committee](https://api.congress.gov/v3/committee/house/hswm00),  the reasons for their withdrawal remain unclear, though sources suggest disagreements over specific provisions within the bill. The absence of recorded hearings or votes further underscores the lack of traction on Capitol Hill.
+
+**Politics**
+
+The shift in cosponsor support introduces a notable level of uncertainty into the bill's future. While [Rep. Vern Buchanan](https://api.congress.gov/v3/member/B001260) remains committed to its passage, the reduced backing signals potential difficulties in garnering enough votes on the House floor. The decision by cosponsors raises questions about broader Republican strategy and potentially reflects a growing resistance within the party to significant healthcare reforms.
+
+**What's Next**
+
+Currently, [H.R. 4313](https://www.congress.gov/bill/119th-congress/hr-bill/4313) is languishing on the Union Calendar, awaiting a vote.  Without a clear path forward and with key cosponsors pulling their support, its chances of advancing to a full House vote appear slim - at least for the foreseeable future. The [Ways and Means Committee](https://api.congress.gov/v3/committee/house/hswm00) will likely need to revisit the bill's language or seek renewed support before it can regain momentum.
+
+**Closing Graf**
+
+The stalled progress of [H.R. 4313](https://www.congress.gov/bill/119th-congress/hr-bill/4313) highlights the often-fragile nature of legislative initiatives in Washington and underscores the significant challenges facing healthcare reform efforts within a divided Congress.
