--- a/output/hr5345.md
+++ b/output/hr5345.md
@@ -1,21 +1,15 @@
-# Kustoff Champions Social Security Identity Theft Bill
+## Kustoff Bill Aims to Sharpen Social Security's Response to Identity Theft
 
-By Sarah Miller - October 31, 2025
+By Sarah Miller - November 2, 2025
 
-**WASHINGTON --** Rep. David Kustoff (R-TN-8) is pushing forward legislation aimed at bolstering the Social Security Administration's response to instances of identity theft affecting beneficiaries, according to House records. The "Improving Social Security's Service to Victims of Identity Theft Act" was marked up by the [Ways and Means Committee](https://api.congress.gov/v3/committee/house/hswm00) on September 17th, marking a key step in its potential passage.
+The House is considering legislation aimed at bolstering Social Security's ability to combat the growing threat of identity theft targeting beneficiaries. The "Improving Social Security's Service to Victims of Identity Theft Act," spearheaded by [Rep. Kustoff, David](https://api.congress.gov/v3/member/K000392), is currently navigating the complex machinery of the Ways and Means Committee, signaling a potential area of focus for Republican priorities heading into the fall legislative schedule.
 
-**Inside the Room**
+**Immediate Context:** The bill's introduction underscores concerns about the vulnerability of Social Security recipients to fraud and identity theft - a problem that has seen increasing attention from lawmakers and consumer advocacy groups.  The legislation seeks to streamline processes and improve communication between Social Security Administration (SSA) officials and victims, offering a tangible response to a persistent challenge.
 
-The bill, originating in the House, has been formally placed on the Union Calendar (Calendar No. 312) as of today.  It's currently housed within the [Ways and Means Committee](https://api.congress.gov/v3/committee/house/hswm00) - where it was marked up - and represents one of Rep. Kustoff's current initiatives.  A single cosponsor, also sitting on the [Ways and Means Committee](https://api.congress.gov/v3/committee/house/hswm00), Rep. Kustoff himself, has attached his name to the measure.  Crucially, no amendments have been proposed at this time, indicated by an empty "amendments" field within available data.  Eight actions related to the bill have been recorded, though details regarding their partisan nature remain unclear. 
+**Inside the Room:** The bill, formally designated [H.R.5345](https://www.congress.gov/bill/119th-congress/hr-bill/5345), was reported by the [Ways and Means Committee](https://api.congress.gov/v3/committee/house/hswm00) on September 17, 2025, marking a significant step in its legislative journey. It subsequently received a markup on September 15, 2025, and was placed on the Union Calendar (Calendar No. 312) as of October 31, 2025 - demonstrating momentum within the House.  Notably, [Rep. Kustoff, David](https://api.congress.gov/v3/member/K000392), a cosponsor and member of the committee driving this effort, has positioned himself at the center of this initiative.
 
-**Politics**
+**Politics:** The bill's current lack of hearings or amendments suggests a deliberate strategy by its sponsor - focused on building consensus within the Ways and Means Committee and avoiding potential roadblocks early in the process. While no formal votes have been recorded yet, the placement on the Union Calendar indicates a degree of support from leadership.  The bipartisan nature of this effort remains unclear at this stage; however, [Rep. Kustoff, David](https://api.congress.gov/v3/member/K000392)'s involvement within the committee suggests potential for broader backing.
 
-The timing of the markup - September 17th - suggests a deliberate push by the Tennessee Republican to advance the legislation through the committee process. While specifics on potential impact are limited given the lack of amendments and available data on action partisanship, the bill's placement on the Union Calendar signifies some level of support within the House leadership.  The [Ways and Means Committee](https://api.congress.gov/v3/committee/house/hswm00)'s marked-up version indicates a degree of consensus among its members regarding the need for improved protections against identity theft impacting Social Security recipients - a concern increasingly highlighted by watchdog groups and constituent outreach.
+**What's Next:** The bill's progression through the calendar will determine its path to a floor vote.  Its placement on Calendar No. 312 signifies that it is awaiting consideration by the full House - a crucial juncture where further debate and possible amendments could reshape its final form.  The timing of any potential vote remains uncertain, contingent on committee scheduling and overall legislative priorities.
 
-**What's Next**
-
-Next steps are currently unknown, as no votes have been scheduled or reported. The bill's path through the House remains fluid, contingent on committee consideration and subsequent action on the floor.  Further updates will be provided as they become available. 
-
-**Closing Graf**
-
-The "Improving Social Security's Service to Victims of Identity Theft Act" represents a relatively quiet but potentially significant effort within the broader context of ongoing debates about Social Security reform and beneficiary protections - signaling a continued focus on safeguarding vulnerable populations from fraud and abuse.
+**Closing Graf:** As Congress grapples with budgetary pressures and competing demands for attention, [H.R.5345](https://www.congress.gov/bill/119th-congress/hr-bill/5345) represents a targeted effort to address a specific vulnerability within the Social Security system - a move that could provide valuable protections for millions of beneficiaries and highlight the [Ways and Means Committee](https://api.congress.gov/v3/committee/house/hswm00)'s commitment to safeguarding taxpayer dollars.
