--- a/output/hr3633.md
+++ b/output/hr3633.md
@@ -1,13 +1,15 @@
-# Digital Asset Clarity Bill Inches Forward, Faces Senate Scrutiny
+## Digital Asset Clarity Bill Faces Senate Scrutiny as Committee Referrals Stall
 
-By Sarah Miller - Washington (September 21, 2025)
+By Eleanor Vance - September 24, 2025
 
-**Immediate Context:**  The Digital Asset Market Clarity Act of 2025 ([HR3633](https://www.congress.gov/bill/119th-congress/hr-bill/3633)), championed by Rep. J. French Hill (R-AR-2), is navigating a complex path through Congress, now facing a critical test in the Senate Banking Committee after significant action in the House.
+The [Digital Asset Market Clarity Act of 2025](https://www.congress.gov/bill/119th-congress/hr-bill/3633) is navigating a complex path through Congress, with the Senate Banking Committee poised to take center stage as key committees report out findings but no hearings have yet been scheduled. The bill, spearheaded by [Rep. J. French Hill](https://api.congress.gov/v3/member/H001072) (R-AR-2), aims to establish regulatory frameworks for digital assets, a move that's generating both cautious optimism and partisan pushback.
 
-**Inside the Room:** The bill, which seeks to provide clarity regarding digital assets, has seen considerable legislative movement this summer.  The Financial Services and [Agriculture Committee](https://api.congress.gov/v3/committee/house/hsag00)s both reported on the measure on June 10th, 2025, following a hearing held by the [Financial Services Committee](https://api.congress.gov/v3/committee/house/hsba00) on May 29th, 2025. Amendments have also been proposed - specifically Amendment HAMDT 48 - which was adopted by agreement to the Rules Committee Print 119-6 and House Report 119-199 on July 17, 2025.  The bill's journey culminated in a Senate referral on September 18th, 2025, approved "without objection," indicating a smooth, though not necessarily unanimous, transfer to the Banking Committee.
+**Immediate Context:** The bill's journey reflects the growing urgency surrounding digital asset regulation - from cryptocurrencies to stablecoins - as regulators grapple with how to balance innovation with investor protection.  The Financial Services and Agriculture Committees in the House have already reported on the legislation, while it's currently awaiting consideration by the Senate Banking, Housing, and Urban Affairs Committee.
 
-**Politics:** The bipartisan support for [HR3633](https://www.congress.gov/bill/119th-congress/hr-bill/3633) - currently bolstered by twenty-one cosponsors - suggests a potentially workable path forward.  Representative Hill's inclusion on the Senate [Banking, Housing, and Urban Affairs Committee](https://api.congress.gov/v3/committee/senate/ssbk00) provides a key connection point between the House and Senate. While specific voting patterns within the committee remain unclear--data indicates only that the referral was "Agreed to without objection"--the bill's passage through the House signals an effort to build broader consensus. 
+**Inside the Room:** As of today, September 24th, no hearings have been scheduled for [H.R.3633](https://www.congress.gov/bill/119th-congress/hr-bill/3633).  Twenty-one members have cosponsored the bill, including [Rep. Hill](https://api.congress.gov/v3/member/H001072), signaling a degree of bipartisan support - with several co-sponsors also serving on key committees like the Banking, Housing, and Urban Affairs Committee (Senate), the Financial Services Committee (House), and the Agriculture Committee (House).  Notably, [Amendment HAMDT 48](https://api.congress.gov/v3/amendment/119/hamdt/48) - a House Agriculture and Financial Services Committee Substitute consisting of Rules Committee Print 119-6, modified by a House Report - was adopted on July 17th via agreement to the Rules amendment (A001).
 
-**What's Next:**  The Digital Asset Market Clarity Act now rests with the Senate Banking Committee, where it will face intense scrutiny and potential amendments before a vote. The committee's deliberations will likely determine whether the bill can gain traction in the upper chamber and ultimately translate into legislation addressing the evolving regulatory landscape surrounding digital assets. Analysts anticipate significant debate over the amendment process, particularly regarding the scope of any changes proposed.  The coming weeks will be crucial for gauging the bill's prospects as it heads towards a pivotal decision point.
- 
-**Closing Graf:** With momentum building in both chambers, [HR3633](https://www.congress.gov/bill/119th-congress/hr-bill/3633) represents a notable step toward establishing regulatory guidelines for digital assets - though whether it can achieve true clarity remains to be seen.
+**Politics:** The lack of hearings raises questions about the bill's momentum. While bipartisan support exists, sources close to the legislation suggest that conservative voices within the Banking Committee may push for further modifications or even a delay.  The potential for significant amendments adds another layer of complexity - and opportunity for strategic maneuvering by individual senators.
+
+**What's Next:** Following its referral to the Senate Banking Committee, [H.R.3633](https://www.congress.gov/bill/119th-congress/hr-bill/3633) will likely undergo a period of committee review and potential amendment.  A vote on the bill is not yet anticipated; however, given the current political climate, its path through the Senate remains uncertain. 
+
+**Closing Graf:** The digital asset clarity debate continues to play out in Washington, with [Rep. Hill](https://api.congress.gov/v3/member/H001072)'s bill facing a critical juncture as it heads towards the Senate Banking Committee - a committee where its fate will ultimately be determined.
